# mcp-google-contacts-server

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  test_contact_groups.py
scripts/: format.sh  lint.sh
src/: config.py  formatters.py  google_contacts_service.py  main.py  tools.py
